<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/github_alt_brands_solid_full"
        android:title="@string/chat" />

    <item
        android:id="@+id/nav_extend"
        android:icon="@drawable/battle_net_brands_solid_full"
        android:title="@string/information" />
    <item
        android:id="@+id/nav_vocab"
        android:icon="@drawable/ic_lesson_24"
        android:title="@string/vocab" />


    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/settings"
        android:title="@string/settings" />


</menu>