<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#32bea6"
        android:elevation="4dp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp">

        <ImageButton
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:background="@null"
            android:translationX="-15dp"></ImageButton>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Part 1. Đọc văn bản"
            android:layout_marginLeft="20dp"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:id="@+id/txt_tenPhanThi"
            ></TextView>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:visibility="gone">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/green_microphone"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Số câu đã làm "
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:id="@+id/txt_tongDaLam"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Trả lời đúng "
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:id="@+id/txt_trlDung"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hoàn thành "
                    android:textStyle="bold"
                    android:textSize="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="15dp"
                    android:id="@+id/txt_hoanThanh"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="%"
                    android:textSize="15dp"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/nghe_cellborder"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical"
            android:layout_marginVertical="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/underline_cauhoi"
                android:textStyle="bold"
                android:textSize="20dp"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cauhoi_en"
                android:layout_marginVertical="10dp"
                android:id="@+id/txt_engQuestion"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cauhoi_vi"
                android:textColor="#7f7f7f"
                android:id="@+id/txt_viQuestion"></TextView>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Chọn số lượng câu hỏi."
            android:textAlignment="center"></TextView>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:id="@+id/sp_slCauHoi"></Spinner>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="bắt đầu"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/noi_buttonborder"
                android:textColor="@color/white"
                android:id="@+id/btn_batDau"
                ></Button>

    </LinearLayout>

</LinearLayout>